# sun2flops

./: .gitignore  README.md  index.html  pyproject.toml  requirements.txt  run_api.py  styles.css  vercel.json
api/: __init__.py  main.py  schemas.py  tasks.py
notebooks/: colab_driver.ipynb
sun2flops/: __init__.py  config.py
sun2flops/battery/: model.py
sun2flops/config/: models.py
sun2flops/control/: governor.py  solar_times.py
sun2flops/data/: io.py  nsrdb.py
sun2flops/gpu/: model.py
sun2flops/pv/: dc_power.py  poa.py
sun2flops/sim/: engine.py  metrics.py
sun2flops/sweep/: runner.py
sun2flops/utils/: hashing.py  units.py  validation.py
sun2flops/viz/: heatmaps.py  plots.py
tests/: test_simulation.py
web/: index.html  package-lock.json  package.json
web/src/: App.css  App.tsx
web/src/api/: client.ts
web/src/components/: ConfigForm.tsx  ExportTab.tsx  Results.tsx  SummaryTab.tsx  SweepTab.tsx  TimeseriesTab.tsx
web/src/hooks/: useSimulation.ts
web/src/types/: index.ts
